@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Parque {
  -idParque
  -numeroMaximo
  -tipo
}

class Farmacia {
  -NIF
  -email
  -morada
}

class Utilizador {
  -NIF
  -nome
  -email
  -numeroSegurancaSocial
  -password
}

class Drone {
  -percentagemBateria
  -pesoMaximo
  -pesoVeiculo
  -potencia
  -areaFrontal
}

Administrador "1" -- "1" Utilizador: atua como >
Administrador "1" -- "1..*" Drone: remove >
Farmacia "1" -- "1" Parque: tem >
Farmacia "1" -- "1" Administrador: tem >
Parque "1" -- "0..*" Drone: tem > 

@enduml

